Minor changes, mostly naming.